# FreeAgent

./: ## Chat Customization Diagnostics.md  .env  .env.local  .eslintrc.json  .gitignore  .kiloworkspace.json  ADD_KEY_INSTRUCTIONS.md  AGENTS.md  API_DOCUMENTATION.md  ARBITRAGE_ENGINE_INTEGRATION.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_VALIDATION.md  ASSISTANT_SYNC_PACKET.md  AUTONOMOUS_CONSTRAINT_DISCOVERY_PROTOCOLFREEAGENT.md  BATCH_FEDERATION_UPGRADE.md  CHANGELOG.md  CHAOS_MODE_README.md  CITATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPACT_CONTINUITY_EVIDENCE_INDEX.md  COMPACT_CONTINUITY_IMPLEMENTATION_PLAN.md  COMPACT_PHENOTYPE_CONTINUITY_GATE_BRIEF.md  CONTRIBUTING.md  COPILOT_META_THINKING_LOG_2026-02-15.md  Cinetpubwwwroot  DEPLOYMENT.md  DEPLOYMENT_MANIFEST.txt  DEVELOPMENT_GUIDE.md  EVALUATION_FRAMEWORK.md  FAQ.md  FREEAGENT_ENFORCEMENT_REALITY_REGISTER.md  FREEAGENT_TOPOLOGY_REPORT_FOR_LIBRARY.md  FREE_AGENT_SWARM_INTEGRATION.SH  GOVERNANCE.md  ISSUE_TEMPLATE.md  MAINTAINERS.md  MOBILE_INTEGRATION_PLAN.md  MONITORING.md  (+109 more)
.claude/: settings.local.json
.openclaw/: workspace-state.json
.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
.venv-py312/: pyvenv.cfg
AGENT_COORDINATION/: MASTER_CONTROL_PLAN.md  PHASE7_ISOLATION_WIRING.md  agent-b-report.md  agent-c-review.md
_root/mev-swarm-temp/gpu/: CMakeLists.txt  README.md  ai-strategy-bridge-updated.cjs  ai-strategy-bridge-updated.js  ai-strategy-bridge.js  compile_runner.cpp  dynamic-strategy-compiler.cu  dynamicStrategyCompiler.cjs  test_kernel.cu
agent1/: launch.cmd  (+2 more)
(+20096 files in other folders)
